# tradediary

./: .flake8  .gitignore  Dockerfile  dev.compose.yml  dev.env  dev.sh  entrypoint.sh  manage.py  pyproject.toml
accounts/: admin.py  apps.py  models.py
accounts/migrations/: 0001_initial.py
app/: urls.py
app/conf/: app.py  dev.py
helpers/: storage.py
helpers/db/: __init__.py  fields.py
trades/: admin.py  models.py
trades/migrations/: 0001_initial.py  0002_alter_position_price.py  0003_alter_positionresult_pnl.py  0004_remove_positionresult_percent_position_balance_and_more.py  0005_rename_price_position_opening_price_and_more.py  0006_alter_positionimage_position_and_more.py  0007_alter_symbol_name.py  0008_alter_positionresult_pnl.py  0009_alter_position_options_alter_positiontype_options_and_more.py  0010_alter_position_options.py  0011_alter_position_options_and_more.py  0012_alter_position_options_and_more.py  0013_alter_positionresult_position.py  0014_remove_positionresult_percent_and_more.py
users/: managers.py  models.py  querysets.py
users/migrations/: 0001_initial.py
